@@ -3,7 +3,9 @@
  * 
  * https://github.com/egalli64/dev-intro
  *
- * Print a message
+ * Hello Java by Unnamed class
+ * 
+ * Run it from CLI by: java --enable-preview --source 22 HelloSimplified.java
  */
 
 void main() {
